package com.directi.training.isp.exercise;

public interface ISensing extends Door  {
    void proximityCallback();
}
