package com.directi.training.isp.exercise;

public interface ITimed extends Door {
    void timeOutCallback();
}
